samples/_failures_safe/1761391945_f33ea6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98dd8d1f.c: In function ‘main’:
./samples/SAFE/__tmp_98dd8d1f.c:173:5: error: expected expression at end of input
  173 |     size_t index = (size_t)(choice -
      |     ^~~~~~
./samples/SAFE/__tmp_98dd8d1f.c:173:5: error: expected declaration or statement at end of input
